Check if TRAVIS variable is set

--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,7 @@ env:
 
 before_install:
     # Travis will automatically install git submodules
+    - echo "travis variable = $TRAVIS"
     - rake install --rakefile Integration\ Tests/Subliminal/Rakefile DOCS=no
 
 script: >
